--- a/banner2/build.gradle
+++ b/banner2/build.gradle
@@ -1,28 +1,28 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
 version = "1.1.0"
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
+
     defaultConfig {
-        applicationId "cn.magic.myself.banner"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName version
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
-    }
+
 }
 
 dependencies {
@@ -32,7 +32,9 @@ dependencies {
     implementation rootProject.ext.support["recyclerview"]
     implementation rootProject.ext.support["appcompat"]
     implementation rootProject.ext.support["constraintlayout"]
-    implementation rootProject.ext.third["fast_json"]
-    implementation rootProject.ext.third["fresco"]
-    api project(':banner2')
+    api rootProject.ext.support["lifecycle"]
+}
+
+kapt {
+    generateStubs = true
 }
