--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
     repositories {
         maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'https://maven.aliyun.com/repository/google' }
-//        google()
-//        jcenter()
+        google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
@@ -28,4 +28,7 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+repositories {
+    mavenCentral()
 }
